Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,6 +3,13 @@
         <title>My first blog</title>
     </head>
     <body>
+      {% for post in posts %}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+   {% endfor %}
         <div>
             <h1><a href="/">Django Blog</a></h1>
         </div>
